<resources>
    <string name="app_name">StaffApp</string>
    <string name="list_specialties">Список специальностей</string>
    <string name="workers_list">Список работников</string>
    <string name="detail_page">Детальная страница</string>
    <string name="FIO">ФИО:</string>
    <string name="birthday">Дата рождения:</string>
    <string name="specialty">Специальность:</string>
    <string name="age">Возраст: %1$s %2$s</string>
    <string name="name">%1$s %2$s</string>
    <string name="date">%1$s - %2$s %3$s</string>
    <string name="personal_info">Личные данные</string>
</resources>