<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/FIO"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <TextView
        android:id="@+id/name"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/labelName"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/labelBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/birthday"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/birthday"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/labelBirthday"
        app:layout_constraintTop_toBottomOf="@id/labelBirthday"
        tools:text="4.11.1999" />

    <TextView
        android:id="@+id/labelSpecialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/specialty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/specialty"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/labelSpecialty"
        app:layout_constraintTop_toBottomOf="@id/labelSpecialty"
        tools:text="Разработчик" />

</androidx.constraintlayout.widget.ConstraintLayout>